Converting a few more parts of the Python intro to notebook form

--- a/lessons/guide-pyblocks/pyblocks-basic-instructor.ipynb
+++ b/lessons/guide-pyblocks/pyblocks-basic-instructor.ipynb
@@ -12,21 +12,27 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Basic Programming Using Python"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
-      "Variables and Assignment (Instructor Version)"
+      "Basic Programming Using Python: Getting Started (Instructor Version)"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "## Objectives\n",
+      "\n",
+      "* Run and use the IPython Notebook.\n",
+      "* Do basic arithmetic in Python.\n",
+      "* Assign values to variables, and use those variables in expressions.\n",
+      "* Explain how variable names should be chosen, and choose appropriate names for variables."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Lesson\n",
+      "\n",
       "The best way to learn how to program is to start programming, so open a\n",
       "shell and run the IPython Notebook by typing:"
      ]
@@ -622,6 +628,21 @@
       "    and reading time. The most important thing is to be consistent, because\n",
       "    every inconsistency makes reading harder and slower.\n",
       "</em>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Key Points\n",
+      "\n",
+      "* Use '=' to assign a value to a variable.\n",
+      "* Variables are created when values are assigned to them.\n",
+      "* Variables cannot be used until they have been created.\n",
+      "* Assigning to one variable does not change the values associated with other variables.\n",
+      "* Use `print` to display multiple values at once.\n",
+      "* Addition ('+'), subtraction ('-'), and multiplication ('*') work as usual in Python.\n",
+      "* Using readable names for variables improves programmer performance."
      ]
     }
    ],
