--- a/lessons/guide-pyblocks/pyblocks-basic-learner.ipynb
+++ b/lessons/guide-pyblocks/pyblocks-basic-learner.ipynb
@@ -12,21 +12,27 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Basic Programming Using Python"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
-      "Variables and Assignment (Learner Version)"
+      "Basic Programming Using Python: Getting Started (Learner Version)"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "## Objectives\n",
+      "\n",
+      "* Run and use the IPython Notebook.\n",
+      "* Do basic arithmetic in Python.\n",
+      "* Assign values to variables, and use those variables in expressions.\n",
+      "* Explain how variable names should be chosen, and choose appropriate names for variables."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Lesson\n",
+      "\n",
       "* Basic arithmetic"
      ]
     },
@@ -299,6 +305,21 @@
       }
      ],
      "prompt_number": 9
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Key Points\n",
+      "\n",
+      "* Use '=' to assign a value to a variable.\n",
+      "* Variables are created when values are assigned to them.\n",
+      "* Variables cannot be used until they have been created.\n",
+      "* Assigning to one variable does not change the values associated with other variables.\n",
+      "* Use `print` to display multiple values at once.\n",
+      "* Addition ('+'), subtraction ('-'), and multiplication ('*') work as usual in Python.\n",
+      "* Using readable names for variables improves programmer performance."
+     ]
     }
    ],
    "metadata": {}
