--- a/lessons/guide-pyblocks/pyblocks-types-instructor.ipynb
+++ b/lessons/guide-pyblocks/pyblocks-types-instructor.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "pyblocks-types-learner"
+  "name": "pyblocks-types-instructor"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,7 +12,7 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Basic Python Using Python: Values and Types (Learner Version)"
+      "Basic Python Using Python: Values and Types (Instructor Version)"
      ]
     },
     {
@@ -32,7 +32,7 @@
      "source": [
       "## Lesson\n",
       "\n",
-      "* Code so far:"
+      "Let's take another look at the Python we have written so far:"
      ]
     },
     {
@@ -60,7 +60,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* Why 5.0/9.0 instead of 5/9?"
+      "Why have we written 5.0/9.0 instead of simply 5/9? Let's see what\n",
+      "happens if we take out the .0's:"
      ]
     },
     {
@@ -88,7 +89,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* 5 and 9 are integers, and integer/integer division truncates:"
+      "That's not right. To understand what's gone wrong, let's look at 5/9:"
      ]
     },
     {
@@ -114,7 +115,16 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* If either value is a floating point number, fractional part is retained:"
+      "The problem is that computers have two different kinds of numbers:\n",
+      "[integers](glossary.html#integer) like 1, 2, and 3, and floating-point\n",
+      "numbers (or [floats](glossary.html#float)), which have fractional parts.\n",
+      "If a number is written without a decimal point, Python stores it as an\n",
+      "integer. When it divides one integer by another, it throws away the\n",
+      "remainder: to a computer, 5/2 is 2, not 2.5.\n",
+      "\n",
+      "If a number contains a decimal point, though, Python stores it as a\n",
+      "float. When it does division or any other kind of arithmetic, the result\n",
+      "is a float if either of the values involved is a float:"
      ]
     },
     {
@@ -147,19 +157,48 @@
      "outputs": [
       {
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 1,
        "text": [
         "3.3333333333333335"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* Python also has a remainder operator '%'"
+      "Computers have both kinds of numbers for two reasons. The first is\n",
+      "historical: integer operations were significantly faster on early\n",
+      "computers, so allowing people to use them was one way to speed up\n",
+      "programs. Secondly, they actually have different purposes: integers are\n",
+      "for counting things, and floats for measuring quantities."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### *Changing the Rules*\n",
+      "\n",
+      "<em>\n",
+      "    Version 3 of Python changed the rules for division so that it creates\n",
+      "    fractional numbers when it should. However, we're using Python 2.7, so\n",
+      "    10/3 is 3 until further notice.\n",
+      "</em>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### *Remainder*\n",
+      "\n",
+      "<em>\n",
+      "    Python has another \"division\" operator, written '%', which returns the\n",
+      "    remainder that integer division throws away:\n",
+      "</em>"
      ]
     },
     {
@@ -204,7 +243,10 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* Use `type` function to determine a value's type:"
+      "Integers and floats are two [types](glossary.html#type) of data. Every\n",
+      "value in a program has a specific type that determines how it behaves\n",
+      "and what can be done to it. We can find out what type something is using\n",
+      "a built-in [function](glossary.html#function) called `type`:"
      ]
     },
     {
@@ -249,7 +291,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* Create character strings using matching double or single quotes"
+      "Another common data type is the character string. We can create one by\n",
+      "putting characters inside either single or double quotes (as long as we\n",
+      "use the same kind at the beginning and end):"
      ]
     },
     {
@@ -277,7 +321,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* Add (concatenate) and multiply strings"
+      "We can also \"add\" and \"multiply\" strings:"
      ]
     },
     {
@@ -323,7 +367,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* Cannot add strings and numbers because result would be ambiguous"
+      "What we *can't* do is add numbers and strings:"
      ]
     },
     {
@@ -352,7 +396,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* Use `int` and `str` functions to convert"
+      "The reason we can't is that Python won't always know what we actually\n",
+      "want. \"2three\" would be a reasonable result in this case, but should\n",
+      "`2+\"3\"` produce the integer 5 or the string `\"23\"`? Rather than guessing\n",
+      "at the programmer's intentions, Python requires us to tell it whether to\n",
+      "convert the number to a string or the string to a number so that it\n",
+      "knows what kind of addition to do. We do this using `int` and `str`,\n",
+      "which are two more built-in functions:"
      ]
     },
     {
@@ -397,7 +447,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* Variables are just names --- they don't have types"
+      "One last fact about types is that variables in Python don't have them:\n",
+      "only values do. A variable is a just a name; it can refer to a string at\n",
+      "one point in a program, and a float a moment later:"
      ]
     },
     {
@@ -439,6 +491,24 @@
       }
      ],
      "prompt_number": 19
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### *Static vs. Dynamic Typing*\n",
+      "\n",
+      "<em>\n",
+      "    Programmers argue incessantly about whether this is a good idea or not.\n",
+      "    In [statically-typed](glossary.html#static-typing) languages like\n",
+      "    Fortran, C++, Java, and Haskell, a variable can only store values of a\n",
+      "    particular type. This restriction makes it easier for compilers to check\n",
+      "    programs' correctness and optimize their performance, but languages like\n",
+      "    Python and R, which are designed for interactive use, tend to be\n",
+      "    [dynamically typed](glossary.html#dynamic-typing) in order to keep\n",
+      "    fingers-on-keyboard typing to a minimum.\n",
+      "</em>"
+     ]
     },
     {
      "cell_type": "markdown",
