Adding diagrams to setdict lessons

--- a/lessons/guide-setdict/setdict-dict-instructor.ipynb
+++ b/lessons/guide-setdict/setdict-dict-instructor.ipynb
@@ -44,18 +44,11 @@
       "Once again, we could use a list to store names and counts, but the right\n",
       "solution is to use another new data strucure called a\n",
       "[dictionary](glossary.html#dictionary). A dictionary is a unordered\n",
-      "collection of key-value pairs ([Figure 5](#f:simple_dict)). The keys\n",
+      "collection of key-value pairs. The keys\n",
       "are immutable, unique, and unordered, just like the elements of a set.\n",
       "There are no restrictions on the values stored with those keys: they\n",
       "don't have to be immutable or unique. However, we can only look up\n",
       "entries by their keys, not by their values."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "FIXME: diagram"
      ]
     },
     {
@@ -191,6 +184,15 @@
       }
      ],
      "prompt_number": 4
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "At this point, our set looks like this:\n",
+      "\n",
+      "<img src=\"files/simple_dict.png\" alt=\"A Simple Dictionary\" />"
+     ]
     },
     {
      "cell_type": "markdown",
