--- a/lessons/guide-setdict/setdict-dict-learner.ipynb
+++ b/lessons/guide-setdict/setdict-dict-learner.ipynb
@@ -135,6 +135,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "<img src=\"files/simple_dict.png\" alt=\"A Simple Dictionary\" />"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "* Can only read values that are already there"
      ]
     },
