--- a/lessons/guide-setdict/setdict-json-instructor.ipynb
+++ b/lessons/guide-setdict/setdict-json-instructor.ipynb
@@ -375,19 +375,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "[Figure 9](#f:json_alias) shows the difference between the original data\n",
+      "The diagram below shows the difference between the original data\n",
       "structure (referred to by `outer`) and what winds up in `duplicate`. If\n",
       "aliases might be present in our data, and it's important to preserve\n",
       "their structure, we must either record the aliasing ourself (which is\n",
       "tricky), or use some other format. Luckily, a lot of data either doesn't\n",
-      "contain aliases, or the aliasing in it isn't important."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "FIXME: diagram"
+      "contain aliases, or the aliasing in it isn't important.\n",
+      "\n",
+      "<img src=\"files/json_alias.png\" alt=\"Lack of Aliasing in JSON\" />"
      ]
     },
     {
