--- a/lessons/guide-setdict/setdict-nanotech-instructor.ipynb
+++ b/lessons/guide-setdict/setdict-nanotech-instructor.ipynb
@@ -102,15 +102,10 @@
       "Let's start by reading in our inventory. It consists of pairs of strings\n",
       "and numbers, which by now should suggest using a dictionary for storage.\n",
       "The keys will be atomic symbols, and the values will be the number of\n",
-      "atoms of that kind we currently have ([Figure 6](#f:nanotech_inventory)). \n",
-      "If an atom isn't listed in our inventory, we'll assume that we don't have any."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "FIXME: diagram"
+      "atoms of that kind we currently have. \n",
+      "If an atom isn't listed in our inventory, we'll assume that we don't have any.\n",
+      "\n",
+      "<img src=\"files/nanotech_inventory.png\" alt=\"Inventory in Memory\" />"
      ]
     },
     {
@@ -122,15 +117,10 @@
       "suggests a dictionary. Each of its values will be something storing\n",
       "atomic symbols and the number of atoms of that type in the molecule\u2014the\n",
       "same structure, in fact, that we're using for our inventory.\n",
-      "[Figure 7](#f:nanotech_formulas) shows what this looks like in memory if the\n",
-      "only molecules we know how to make are water and ammonia."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "FIXME: diagram"
+      "The diagram below shows what this looks like in memory if the\n",
+      "only molecules we know how to make are water and ammonia.\n",
+      "\n",
+      "<img src=\"files/nanotech_formulas.png\" alt=\"Formulas in Memory\" />"
      ]
     },
     {
@@ -139,7 +129,7 @@
      "source": [
       "Finally, we'll store the results of our calculation in yet another\n",
       "dictionary, this one mapping the names of molecules to how many\n",
-      "molecules of that kind we can make ([Figure 8](#f:nanotech_results)),\n",
+      "molecules of that kind we can make,\n",
       "and display like this:\n",
       "\n",
       "```\n",
@@ -147,13 +137,6 @@
       "hydrogen 2\n",
       "water 2\n",
       "```"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "FIXME: diagram"
      ]
     },
     {
