--- a/lessons/guide-setdict/setdict-nanotech-learner.ipynb
+++ b/lessons/guide-setdict/setdict-nanotech-learner.ipynb
@@ -61,7 +61,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "FIXME: diagram (inventory in memory)"
+      "<img src=\"files/nanotech_inventory.png\" alt=\"Inventory in Memory\" />"
      ]
     },
     {
@@ -98,7 +98,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "FIXME: diagram (formula storage)"
+      "<img src=\"files/nanotech_formulas.png\" alt=\"Formulas in Memory\" />"
      ]
     },
     {
