--- a/lessons/guide-setdict/setdict-sets-instructor.ipynb
+++ b/lessons/guide-setdict/setdict-sets-instructor.ipynb
@@ -167,6 +167,15 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "The set stores references to the three values in no particular order:\n",
+      "\n",
+      "<img src=\"files/simple_set.png\" alt=\"A Simple Set\" />"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "However, we have to use `set()` to create an empty set, because the\n",
       "symbol `{}` was already being used for something else when sets were\n",
       "added to Python:"
