--- a/lessons/guide-setdict/setdict-sets-learner.ipynb
+++ b/lessons/guide-setdict/setdict-sets-learner.ipynb
@@ -72,13 +72,37 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "primes = {3, 5, 7}\n",
+      "primes = {3, 5, 7}"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<img src=\"files/simple_set.png\" alt=\"A Simple Set\" />"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* Must use `set()` to create an empty set instead of `{}`"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "even_primes = set()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
