--- a/lessons/guide-setdict/setdict-storage-instructor.ipynb
+++ b/lessons/guide-setdict/setdict-storage-instructor.ipynb
@@ -110,14 +110,14 @@
       "and so on up to 122 for lower-case 'z'. When we add them up, we will\n",
       "always get the same result: in this case, 532. If our hash table has 8\n",
       "slots, we can take the remainder 532%8=4 to figure out where to store\n",
-      "a reference to our string in the hash table ([Figure 2](#f:set_storage_string))."
+      "a reference to our string in the hash table."
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "FIXME: diagram"
+      "<img src=\"files/set_storage_string.png\" alt=\"Storing a String in a Set\" />"
      ]
     },
     {
@@ -126,14 +126,14 @@
      "source": [
       "Now let's take a look at how a list would be stored. If the list\n",
       "contains the same five characters, so that its hash code is still 4, it\n",
-      "would be stored as shown in [Figure 3](#f:set_storage_list):"
+      "would be stored:"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "FIXME: diagram"
+      "<img src=\"files/set_storage_list.png\" alt=\"Storing a List in a Hash Table\" />"
      ]
     },
     {
@@ -146,15 +146,14 @@
       "instead of 532, which means that the modified list belongs in slot 2\n",
       "rather than slot 4. However, the reference to the list is still in the\n",
       "old location: the set doesn't know that the list's contents have\n",
-      "changed, so it hasn't moved its reference to the right location\n",
-      "([Figure 4](#f:set_storage_mutate)):"
+      "changed, so it hasn't moved its reference to the right location."
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "FIXME: diagram"
+      "<img src=\"files/set_storage_mutate.png\" alt=\"Contents of Memory After Changing List\" />"
      ]
     },
     {
