--- a/lessons/guide-setdict/setdict-storage-learner.ipynb
+++ b/lessons/guide-setdict/setdict-storage-learner.ipynb
@@ -100,21 +100,22 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "FIXME: diagram"
+      "<img src=\"files/set_storage_string.png\" alt=\"Storing a String in a Set\" />"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* If we put a reference to a list into a set, then change the set, the reference is in the wrong place"
+      "* If we put a reference to a list into a set, then change the list, the reference is in the wrong place"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "FIXME: diagram"
+      "<img src=\"files/set_storage_list.png\" alt=\"Storing a List in a Hash Table\" />\n",
+      "<img src=\"files/set_storage_mutate.png\" alt=\"Contents of Memory After Changing List\" />"
      ]
     },
     {
