--- a/lessons/guide-pyblocks/pyblocks-index-instructor.ipynb
+++ b/lessons/guide-pyblocks/pyblocks-index-instructor.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "pyblocks-index-learner"
+  "name": "pyblocks-index-instructor"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,7 +12,7 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Basic Programming Using Pythons: Indexing (Learner Version)"
+      "Basic Programming Using Pythons: Indexing (Instructor Version)"
      ]
     },
     {
@@ -32,14 +32,15 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Lesson"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "* Many things in Python can be indexed:"
+      "## Lesson\n",
+      "\n",
+      "A `for` loop is one way to tell the computer to do something many times.\n",
+      "Another is to tell it where to do things, and let it figure out how best\n",
+      "to take action.\n",
+      "\n",
+      "To see how this works, let's first revisit indexing. We have seen that\n",
+      "`grid[0, 1]` refers to a single block in a grid. Many other things in\n",
+      "Python can be indexed as well, like strings:"
      ]
     },
     {
@@ -65,7 +66,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* Cannot access nonexistent (out of bounds) elements"
+      "Here's something that *doesn't* work:"
      ]
     },
     {
@@ -94,7 +95,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* Negative indices count backward from the end of the collection"
+      "The string `\"Darwin\"` only has six characters, so `\"Darwin\"[999]`\n",
+      "doesn't exist. Rather than giving us some default value such as a blank\n",
+      "or the empty string, Python considers this an error. The reasoning is\n",
+      "the same as that given [earlier](#a:creating-variables): if we haven't\n",
+      "defined a value, our program shouldn't guess what we might have wanted.\n",
+      "\n",
+      "Given that, you might be surprised to learn that Python actually lets\n",
+      "use use negative indices:"
      ]
     },
     {
@@ -120,7 +128,76 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* Use a slice to select several elements"
+      "As the diagram below shows, these count backwards from the end of the string."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "FIXME: diagram"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Negative indices aren't actually necessary: if we want to get\n",
+      "the last element of the string referred to by the variable `thing`, we\n",
+      "can always write:"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "    thing[len(thing) - 1]"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "However, this is harder both to type and to read."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "All of the indices we have seen so far have specified single items, such\n",
+      "as a single cell in an image grid or a single character, but that\n",
+      "doesn't have to be the case. We can instead specify ranges of values,\n",
+      "also called a [slice](glossary.html#slice).\n",
+      "Slices are written as `[lower:upper]`. Python interprets them according\n",
+      "to the following rules:\n",
+      "\n",
+      "-   A slice runs from its lower bound up to, but not including, its\n",
+      "    upper bound, so that the total number of elements selected is\n",
+      "    upper-lower. (In mathematical terms, a slice is either \"half open\"\n",
+      "    or \"half closed\".)\n",
+      "-   This means that a slice whose lower and upper bounds are the same,\n",
+      "    like `[5:5]`, selects nothing. It also means that if the upper bound\n",
+      "    is less than the lower bound, as in `[5:2]`, nothing is selected as\n",
+      "    well.\n",
+      "-   Slices are more lenient than single indices: if one of the bounds is\n",
+      "    out of range, it is treated as being 0 or the length of the object,\n",
+      "    so that `name[5:999]` is legal even when there are only 11\n",
+      "    characters in `name`. Some of us think this inconsistency is a bug;\n",
+      "    others think it is a useful feature.\n",
+      "-   Negative indices count backward as always, so `name[5:-1]` goes from\n",
+      "    the fifth character up to, but not including, the last character.\n",
+      "-   As a result, `thing[1:-1]` is everything in `thing` except the first\n",
+      "    and last element. This is often useful in scientific programming\n",
+      "    when we want to select the interior of a range of values.\n",
+      "-   If we omit the lower bound, it defaults to 0; if we omit the upper,\n",
+      "    it defaults to the length of the thing we're slicing. Thus,\n",
+      "    `name[:6]` is the same as `name[0:6]` and `name[6:]` is the same as\n",
+      "    `name[6:len(name)]`.\n",
+      "-   So by extension, if we omit both bounds, we simply select the entire\n",
+      "    thing.\n",
+      "\n",
+      "Here are a few examples."
      ]
     },
     {
@@ -299,7 +376,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* Slices work in two dimensions"
+      "Slices work in two dimensions as well as one. To see this, let's create\n",
+      "a grid and then change the color of the upper left corner:"
      ]
     },
     {
@@ -316,7 +394,7 @@
      "outputs": [
       {
        "html": [
-        "<style type=\"text/css\">table.blockgrid {border: none;} .blockgrid tr {border: none;} .blockgrid td {padding: 0px;} #blocks704c4d85-74fd-4124-b94b-8ad7884c02c8 td {border: 1px solid white;}</style><table id=\"blocks704c4d85-74fd-4124-b94b-8ad7884c02c8\" class=\"blockgrid\"><tbody><tr><td title=\"Index: [0, 4]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [1, 4]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [2, 4]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [3, 4]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [4, 4]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td></tr><tr><td title=\"Index: [0, 3]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [1, 3]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [2, 3]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [3, 3]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [4, 3]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td></tr><tr><td title=\"Index: [0, 2]&#10;Color: (255, 0, 128)\" style=\"width: 20px; height: 20px;background-color: rgb(255, 0, 128);\"></td><td title=\"Index: [1, 2]&#10;Color: (255, 0, 128)\" style=\"width: 20px; height: 20px;background-color: rgb(255, 0, 128);\"></td><td title=\"Index: [2, 2]&#10;Color: (255, 0, 128)\" style=\"width: 20px; height: 20px;background-color: rgb(255, 0, 128);\"></td><td title=\"Index: [3, 2]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [4, 2]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td></tr><tr><td title=\"Index: [0, 1]&#10;Color: (255, 0, 128)\" style=\"width: 20px; height: 20px;background-color: rgb(255, 0, 128);\"></td><td title=\"Index: [1, 1]&#10;Color: (255, 0, 128)\" style=\"width: 20px; height: 20px;background-color: rgb(255, 0, 128);\"></td><td title=\"Index: [2, 1]&#10;Color: (255, 0, 128)\" style=\"width: 20px; height: 20px;background-color: rgb(255, 0, 128);\"></td><td title=\"Index: [3, 1]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [4, 1]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td></tr><tr><td title=\"Index: [0, 0]&#10;Color: (255, 0, 128)\" style=\"width: 20px; height: 20px;background-color: rgb(255, 0, 128);\"></td><td title=\"Index: [1, 0]&#10;Color: (255, 0, 128)\" style=\"width: 20px; height: 20px;background-color: rgb(255, 0, 128);\"></td><td title=\"Index: [2, 0]&#10;Color: (255, 0, 128)\" style=\"width: 20px; height: 20px;background-color: rgb(255, 0, 128);\"></td><td title=\"Index: [3, 0]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [4, 0]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td></tr></tbody></table>"
+        "<style type=\"text/css\">table.blockgrid {border: none;} .blockgrid tr {border: none;} .blockgrid td {padding: 0px;} #blocks8e0bbf6c-21ae-41ec-a5ca-3ffd441e106b td {border: 1px solid white;}</style><table id=\"blocks8e0bbf6c-21ae-41ec-a5ca-3ffd441e106b\" class=\"blockgrid\"><tbody><tr><td title=\"Index: [0, 4]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [1, 4]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [2, 4]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [3, 4]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [4, 4]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td></tr><tr><td title=\"Index: [0, 3]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [1, 3]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [2, 3]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [3, 3]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [4, 3]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td></tr><tr><td title=\"Index: [0, 2]&#10;Color: (255, 0, 128)\" style=\"width: 20px; height: 20px;background-color: rgb(255, 0, 128);\"></td><td title=\"Index: [1, 2]&#10;Color: (255, 0, 128)\" style=\"width: 20px; height: 20px;background-color: rgb(255, 0, 128);\"></td><td title=\"Index: [2, 2]&#10;Color: (255, 0, 128)\" style=\"width: 20px; height: 20px;background-color: rgb(255, 0, 128);\"></td><td title=\"Index: [3, 2]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [4, 2]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td></tr><tr><td title=\"Index: [0, 1]&#10;Color: (255, 0, 128)\" style=\"width: 20px; height: 20px;background-color: rgb(255, 0, 128);\"></td><td title=\"Index: [1, 1]&#10;Color: (255, 0, 128)\" style=\"width: 20px; height: 20px;background-color: rgb(255, 0, 128);\"></td><td title=\"Index: [2, 1]&#10;Color: (255, 0, 128)\" style=\"width: 20px; height: 20px;background-color: rgb(255, 0, 128);\"></td><td title=\"Index: [3, 1]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [4, 1]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td></tr><tr><td title=\"Index: [0, 0]&#10;Color: (255, 0, 128)\" style=\"width: 20px; height: 20px;background-color: rgb(255, 0, 128);\"></td><td title=\"Index: [1, 0]&#10;Color: (255, 0, 128)\" style=\"width: 20px; height: 20px;background-color: rgb(255, 0, 128);\"></td><td title=\"Index: [2, 0]&#10;Color: (255, 0, 128)\" style=\"width: 20px; height: 20px;background-color: rgb(255, 0, 128);\"></td><td title=\"Index: [3, 0]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td><td title=\"Index: [4, 0]&#10;Color: (0, 0, 0)\" style=\"width: 20px; height: 20px;background-color: rgb(0, 0, 0);\"></td></tr></tbody></table>"
        ],
        "output_type": "display_data",
        "text": [
@@ -324,7 +402,25 @@
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "As this example shows, the slices in each dimension are combined to\n",
+      "select a range of elements. Assigning to that range then changes the\n",
+      "color of all those elements at once."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "By default, a slice selects every value between its bounds. We can\n",
+      "optionally provide a [stride](glossary.html#stride) to select\n",
+      "regularly-spaced elements instead:"
+     ]
     },
     {
      "cell_type": "code",
@@ -350,13 +446,6 @@
      "prompt_number": 17
     },
     {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "* Use a stride to select regularly-spaced elements"
-     ]
-    },
-    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -377,6 +466,21 @@
       }
      ],
      "prompt_number": 19
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Slicing is an example of [declarative programming](glossary.html#declarative-programming). Instead of telling\n",
+      "the computer *how* to do something, we tell it *what* to do, and let it\n",
+      "figure out what steps to take to achieve that goal. Behind the scenes,\n",
+      "the computer might use a `for` loop to re-color each block in the grid.\n",
+      "It might also use some of the advanced features of the CPU to change\n",
+      "several blocks simultaneously, or distribute the work between different\n",
+      "CPUs if we have a powerful enough machine. We don't need to know: we\n",
+      "just need to know that the right thing will happen, and that we can\n",
+      "spend our time worrying about more important things."
+     ]
     },
     {
      "cell_type": "markdown",
