Diagrams and copy-editing for start of Python intro

--- a/lessons/guide-pyblocks/pyblocks-basic-learner.ipynb
+++ b/lessons/guide-pyblocks/pyblocks-basic-learner.ipynb
@@ -318,7 +318,8 @@
       "* Assigning to one variable does not change the values associated with other variables.\n",
       "* Use `print` to display multiple values at once.\n",
       "* Addition ('+'), subtraction ('-'), and multiplication ('*') work as usual in Python.\n",
-      "* Using readable names for variables improves programmer performance."
+      "* Using readable names for variables improves programmer performance.\n",
+      "* Use tab completion to reduce typing (and typing mistaeks)."
      ]
     }
    ],
