--- a/lessons/guide-pyblocks/pyblocks-basic-instructor.ipynb
+++ b/lessons/guide-pyblocks/pyblocks-basic-instructor.ipynb
@@ -33,8 +33,10 @@
      "source": [
       "## Lesson\n",
       "\n",
-      "The best way to learn how to program is to start programming, so open a\n",
-      "shell and run the IPython Notebook by typing:"
+      "The best way to learn how to program is to start programming.\n",
+      "To do that,\n",
+      "you'll need to run the IPython Notebook,\n",
+      "which you can launch from the shell by typing `ipython notebook`:"
      ]
     },
     {
@@ -52,16 +54,16 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If everything has been installed correctly, you will see something like\n",
-      "the output shown above, which tells you that IPython has started\n",
-      "running. You will also see something like [Figure XXX](#f:ipython_welcome) in your browser."
+      "If everything has been installed correctly,\n",
+      "you will see something like the output shown above.\n",
+      "You will also see something like this in your browser:"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "FIXME: screenshot"
+      "<img src=\"files/ipynb_startup.png\" alt=\"IPython Notebook Startup Screen\" />"
      ]
     },
     {
@@ -76,7 +78,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "FIXME: screenshot"
+      "<img src=\"files/ipynb_blank.png\" alt=\"Blank IPython Notebook\" />"
      ]
     },
     {
@@ -105,24 +107,25 @@
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "[Figure XXX](#f:architecture) shows what just happened. When we type\n",
-      "something into the notebook and run it, the browser sends the contents\n",
-      "of the cell to IPython, which is running in the background. IPython runs\n",
-      "our commands and sends output back to the browser, which displays it and\n",
-      "gives us another box for input."
+      "The diagram below shows what just happened.\n",
+      "When we type something into the notebook and run it,\n",
+      "the browser sends the contents of the cell to IPython,\n",
+      "which is running in the background.\n",
+      "IPython executes those commands and sends output back to the browser,\n",
+      "which displays it and gives us another box for input."
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "FIXME: diagram"
+      "<img src=\"files/notebook_architecture.png\" alt=\"IPython Notebook Architecture\" />"
      ]
     },
     {
@@ -139,26 +142,34 @@
       "</em>\n",
       "\n",
       "<table>\n",
-      "  <tr>\n",
-      "    <td>Shift-Enter</td>\n",
-      "    <td>Run the current cell and move to the next one.</td>\n",
-      "  </tr>\n",
-      "  <tr>\n",
-      "    <td>Control-Enter</td>\n",
-      "    <td>Run the current cell and stay in it.</td>\n",
-      "  </tr>\n",
-      "  <tr>\n",
-      "    <td>Control-M + L</td>\n",
-      "    <td>Turn line numbering on or off.</td>\n",
-      "  </tr>\n",
-      "  <tr>\n",
-      "    <td>Control-M + A</td>\n",
-      "    <td>Insert a new cell above the current one.</td>\n",
-      "  </tr>\n",
-      "  <tr>\n",
-      "    <td>Control-M + B</td>\n",
-      "    <td>Insert a new cell below the current one.</td>\n",
-      "  </tr>\n",
+      "    <tr>\n",
+      "        <td>Shift-Enter</td>\n",
+      "        <td>Run the current cell and move to the next one.</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "        <td>Control-Enter</td>\n",
+      "        <td>Run the current cell and stay in it.</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "        <td>Control-M + L</td>\n",
+      "        <td>Turn line numbering on or off.</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "        <td>Control-M + P</td>\n",
+      "        <td>Move to previous cell</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "        <td>Control-M + A</td>\n",
+      "        <td>Insert a new cell above the current one.</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "        <td>Control-M + B</td>\n",
+      "        <td>Insert a new cell below the current one.</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "        <td>Control-M + N</td>\n",
+      "        <td>Move to next cell</td>\n",
+      "    </tr>\n",
       "</table>"
      ]
     },
@@ -178,23 +189,24 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Python doesn't display anything this time (except a new cell). Instead,\n",
-      "as [Figure XXX](#f:first_variable) shows, it creates a\n",
-      "[variable](glossary.html#variable) called `x` and assigns it the value\n",
-      "2."
+      "Python doesn't display anything this time (except a new cell).\n",
+      "Instead,\n",
+      "as the diagram below shows,\n",
+      "it creates a new [variable](glossary.html#variable) called `x`\n",
+      "and [assigns](glossary.html#assignment) it the value 2:"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "FIXME: diagram"
+      "<img src=\"files/first_assignment.png\" alt=\"First Assignment\" />"
      ]
     },
     {
@@ -221,7 +233,7 @@
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -260,10 +272,9 @@
      "metadata": {},
      "source": [
       "<em>\n",
-      "    The problem is that printing and assignment are both\n",
-      "    [statements](glossary.html#statement). A statement is a complete,\n",
-      "    self-contained action in a programming language, and statements cannot\n",
-      "    be combined. 1+2, on the other hand, is an\n",
+      "    The problem is that printing and assignment are both [statements](glossary.html#statement).\n",
+      "    A statement is a complete, self-contained action in a programming language,\n",
+      "    and statements cannot be combined. 1+2, on the other hand, is an\n",
       "    [expression](glossary.html#expression)\u2014something that produces a new\n",
       "    value\u2014and expressions can be combined in many ways. Except for\n",
       "    assignment, every statement in Python begins with a keyword like\n",
@@ -295,7 +306,7 @@
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -322,7 +333,14 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<img src=\"files/second_assignment.png\" alt=\"Second Assignment\" />"
+     ]
     },
     {
      "cell_type": "markdown",
@@ -349,43 +367,24 @@
        ]
       }
      ],
-     "prompt_number": 6
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "As [Figure XXX](#f:assign_new_value) shows, assigning something to `x`\n",
-      "changes what it points to, but does not change anything else. In\n",
-      "particular, `y` still has the value 4 after this assignment\u2014it is not\n",
-      "automatically updated when `x`'s value changes, as it would in a\n",
-      "spreadsheet:"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "print y"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "4\n"
-       ]
-      }
-     ],
      "prompt_number": 7
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "FIXME: diagram"
+      "As the diagram below shows, assigning something to `x`\n",
+      "changes what it points to, but does not change anything else. In\n",
+      "particular, `y` still has the value 4 after this assignment\u2014it is not\n",
+      "automatically updated when `x`'s value changes, as it would be in a\n",
+      "spreadsheet:"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<img src=\"files/reassignment.png\" alt=\"Reassignment\" />"
      ]
     },
     {
@@ -393,8 +392,8 @@
      "metadata": {},
      "source": [
       "Notice, by the way, that some of our input cells contain several lines\n",
-      "of Python. Referring back to [Figure XXX](#f:architecture), everything\n",
-      "in a cell is sent to IPython for execution at once, and all of the\n",
+      "of Python. Referring back to our earlier diagram of how the IPython Notebook works,\n",
+      "everything in a cell is sent to IPython for execution at once, and all of the\n",
       "output from those lines comes back as a single new output cell."
      ]
     },
@@ -459,10 +458,11 @@
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "body temperature in Kelvin: 310.15\n"
+       "ename": "SyntaxError",
+       "evalue": "invalid syntax (<ipython-input-9-30ac877b6638>, line 4)",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-30ac877b6638>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    temp_kelvin = (temp_fahr - 32.0) * (5.0 / 9.0) + 273.15ature in Kelvin:', temp_kelvin\u001b[0m\n\u001b[0m                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
        ]
       }
      ],
@@ -473,19 +473,11 @@
      "metadata": {},
      "source": [
       "The first line creates a new variable called `temp_fahr` (short for\n",
-      "\"temperature in Fahrenheit\") and gives it the value 98.6\n",
-      "([Figure XXX](#f:first_memory_model)). The second line creates another variable\n",
-      "to hold the temperature in Kelvin (hence its name). It calculates a\n",
+      "\"temperature in Fahrenheit\") and gives it the value 98.6. The second line creates another variable\n",
+      "to hold the temperature in Kelvin (hence its name) and calculates a\n",
       "value for this variable that depends on the value of `temp_fahr`. The\n",
       "last line prints the result; the [character string](glossary.html#string) (or just \"string\" for short) inside quotes\n",
       "is printed as-is, followed by the value of `temp_kelvin`."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "FIXME: diagram"
      ]
     },
     {
@@ -531,21 +523,19 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-9-0fae4d15df1c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdouble_temp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtemp_celsius\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m<ipython-input-10-0fae4d15df1c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdouble_temp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtemp_celsius\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[0;31mNameError\u001b[0m: name 'temp_celsius' is not defined"
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "<em>\n",
-      "    We'll explain what \"module\" means [later](#s:lib). What's important now\n",
-      "    is that this strictness helps catch a lot of typing mistakes. If we\n",
-      "    mistakenly type `temp_far` instead of `temp_fahr`:\n",
+      "    This strictness helps catch a lot of simple mistakes\u2014if we mistakenly type `temp_far` instead of `temp_fahr`:\n",
       "</em>"
      ]
     },
@@ -564,12 +554,12 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-10-7a2e5ea30a74>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtemp_kelvin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtemp_far\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m32.0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m5.0\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m9.0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m273.15\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m<ipython-input-11-7a2e5ea30a74>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtemp_kelvin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtemp_far\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m32.0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m5.0\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m9.0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m273.15\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[0;31mNameError\u001b[0m: name 'temp_far' is not defined"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -600,24 +590,11 @@
       "    Using longer variable names doesn't necessarily mean doing more typing.\n",
       "    Like the shell, IPython supports [tab completion](shell.html#a:tab-completion): if we have created variables\n",
       "    called `temp_fahr` and `temp_kelvin`, then type \"te\" and press tab, the\n",
-      "    notebook will display a list of completions for us to choose from\n",
-      "    ([Figure XXX](#f:tab_completion). If we get as far as typing \"temp\\_f\"\n",
+      "    notebook will display a list of completions for us to choose from. If we get as far as typing \"temp_f\"\n",
       "    and press tab, the rest of the name will be filled in completely because\n",
       "    there's only one possible choice.\n",
-      "</em>"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "FIXME: diagram"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
+      "</em>\n",
+      "\n",
       "<em>\n",
       "    After a while, some programmers start to choose variable names to\n",
       "    optimize tab completion (whether they're conscious of doing so or not).\n",
@@ -642,7 +619,8 @@
       "* Assigning to one variable does not change the values associated with other variables.\n",
       "* Use `print` to display multiple values at once.\n",
       "* Addition ('+'), subtraction ('-'), and multiplication ('*') work as usual in Python.\n",
-      "* Using readable names for variables improves programmer performance."
+      "* Using readable names for variables improves programmer performance.\n",
+      "* Use tab completion to reduce typing (and typing mistaeks)."
      ]
     }
    ],
