Proof-reading lessons on types and grids

--- a/lessons/guide-pyblocks/pyblocks-lib-learner.ipynb
+++ b/lessons/guide-pyblocks/pyblocks-lib-learner.ipynb
@@ -517,7 +517,13 @@
      "source": [
       "## Key Points\n",
       "\n",
-      "FIXME"
+      "- A library (or module) is a collection of functions and variables that can be loaded into other programs.\n",
+      "- Most of the power of a programming system is in its libraries, rather than in the language itself.\n",
+      "- We refer to the things in a library using dotted notation.\n",
+      "- We can represent colors using RGB triples, in which each color component value is between 0 and 255.\n",
+      "- We can use `ipythonblocks.ImageGrid` to draw rectangular grids of cells.\n",
+      "- Grids have methods (functions) and members (variables), which we refer to using dotted notation.\n",
+      "- We refer to a specific cell in a grid using `g[x, y]`."
      ]
     }
    ],
