--- a/lessons/guide-pyblocks/pyblocks-types-instructor.ipynb
+++ b/lessons/guide-pyblocks/pyblocks-types-instructor.ipynb
@@ -23,7 +23,7 @@
       "\n",
       "-   Explain what a data type is.\n",
       "-   Identify the types of integers, floating-point numbers, and strings.\n",
-      "-   Call simple built-in functions correctly."
+      "-   Use built-in type conversion functions correctly."
      ]
     },
     {
@@ -120,7 +120,7 @@
       "numbers (or [floats](glossary.html#float)), which have fractional parts.\n",
       "If a number is written without a decimal point, Python stores it as an\n",
       "integer. When it divides one integer by another, it throws away the\n",
-      "remainder: to a computer, 5/2 is 2, not 2.5.\n",
+      "remainder: 5/2 is 2, not 2.5.\n",
       "\n",
       "If a number contains a decimal point, though, Python stores it as a\n",
       "float. When it does division or any other kind of arithmetic, the result\n",
@@ -131,39 +131,26 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "10/3"
+      "print 'no decimal points:', 10/3\n",
+      "print 'decimal point on top:', 10.0/3\n",
+      "print 'decimal point on bottom:', 10/3.0\n",
+      "print 'both with decimal points:', 10.0/3.0"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "pyout",
-       "prompt_number": 4,
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
-        "3"
+        "no decimal points: 3\n",
+        "decimal point on top: 3.33333333333\n",
+        "decimal point on bottom: 3.33333333333\n",
+        "both with decimal points: 3.33333333333\n"
        ]
       }
      ],
      "prompt_number": 4
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "10.0/3"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "pyout",
-       "prompt_number": 1,
-       "text": [
-        "3.3333333333333335"
-       ]
-      }
-     ],
-     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -260,13 +247,13 @@
      "outputs": [
       {
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 5,
        "text": [
         "int"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -279,13 +266,13 @@
      "outputs": [
       {
        "output_type": "pyout",
-       "prompt_number": 9,
+       "prompt_number": 6,
        "text": [
         "float"
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -315,7 +302,7 @@
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -342,7 +329,7 @@
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -361,7 +348,7 @@
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -385,24 +372,24 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-14-f6f99c093ec8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"three\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m<ipython-input-10-f6f99c093ec8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"three\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The reason we can't is that Python won't always know what we actually\n",
+      "The reason we can't is that Python can't always know what we actually\n",
       "want. \"2three\" would be a reasonable result in this case, but should\n",
       "`2+\"3\"` produce the integer 5 or the string `\"23\"`? Rather than guessing\n",
       "at the programmer's intentions, Python requires us to tell it whether to\n",
-      "convert the number to a string or the string to a number so that it\n",
-      "knows what kind of addition to do. We do this using `int` and `str`,\n",
-      "which are two more built-in functions:"
+      "convert the number to a string, or the string to a number, so that it\n",
+      "knows what kind of addition to do. We do this using two more built-in functions\n",
+      "called `int` and `str`:"
      ]
     },
     {
@@ -422,7 +409,7 @@
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -441,14 +428,14 @@
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "One last fact about types is that variables in Python don't have them:\n",
-      "only values do. A variable is a just a name; it can refer to a string at\n",
+      "only values do. A variable is just a name; it can refer to a string at\n",
       "one point in a program, and a float a moment later:"
      ]
     },
@@ -470,7 +457,7 @@
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -490,7 +477,7 @@
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
