--- a/lessons/swc-python/python-1-functions.ipynb
+++ b/lessons/swc-python/python-1-functions.ipynb
@@ -457,7 +457,7 @@
      "metadata": {},
      "source": [
       "and the value `fahr_to_kelvin` produced is assigned to a new variable called `degrees_k`.\n",
-      "Thisvariable is created in `fahr_to_celsius`'s stack frame;\n",
+      "This variable is created in `fahr_to_celsius`'s stack frame;\n",
       "like the parameter `temp`,\n",
       "it only exists as long as the function is being executed.\n",
       "`fahr_to_celsius` then passes this value to `kelvin_to_celsius`,\n",
@@ -864,7 +864,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "A better design is to require users to tell us how width they want thumbnails to be:"
+      "A better design is to require users to tell us how wide they want thumbnails to be:"
      ]
     },
     {
