added explanation about comparisons, genotype example details

--- a/lessons/thw-python/flow-control/python_flow_control.ipynb
+++ b/lessons/thw-python/flow-control/python_flow_control.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": ""
+  "name": "python_flow_control"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -11,14 +11,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "# Flow Control"
+      "# Python: Flow Control"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Materials by: Joshua R. Smith, Milad Fatenejad, Katy Huff, Tommy Gyu, John Blischay and many more**"
+      "Materials by: John Blischak and other Software Carpentry instructors (Joshua R. Smith, Milad Fatenejad, Katy Huff, Tommy Guy, Anthony Scopatz, and many more)"
      ]
     },
     {
@@ -32,9 +32,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "# Comparisons\n",
+      "# Boolean operators\n",
       "\n",
-      "Python comes with literal comparison operators.  Namely, `< > <= >= == !=`.  All comparisons return the lirteral boolean values: `True` or `False`.  These can be used to test values against one another. For example,"
+      "Python comes with literal comparison operators.  Namely, `< > <= >= == !=`.  All comparisons return the literal boolean values: `True` or `False`.  These can be used to test values against one another. For example,"
      ]
     },
     {
@@ -46,6 +46,13 @@
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Comparisons between strings are defined, but may not give the answers you expect:"
+     ]
     },
     {
      "cell_type": "code",
@@ -123,7 +130,7 @@
      "collapsed": false,
      "input": [
       "x = [1, 2, 3]\n",
-      "y = [1, 2, 3]\n",
+      "y = x\n",
       "x is y"
      ],
      "language": "python",
@@ -134,8 +141,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "x = 'hello'\n",
-      "y = x\n",
+      "x = [1, 2, 3]\n",
+      "y = [1, 2, 3]\n",
       "x is y"
      ],
      "language": "python",
@@ -168,7 +175,7 @@
      "source": [
       "# If statements\n",
       "\n",
-      "That said, these comparisons can be placed inside of an **if** statement.  Such statements have the following form:\n",
+      "Comparisons can be used to control program behavior by placing them in an **if** statement.  Such statements have the following form:\n",
       "\n",
       "    if <condition>:\n",
       "        <indented block of code>\n",
@@ -305,14 +312,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Be careful because the computer interprets comparisons very literally."
+      "Be careful; comparisons will sometimes return a value even when comparing things of different `type`:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "'1' < 2"
+      "'1' < 2          # comparing a string and an int"
      ],
      "language": "python",
      "metadata": {},
@@ -322,17 +329,34 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "True == 'True'"
+      "True == 'True'   # comparing a boolean and a string"
      ],
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "As a special case, the Boolean values match 0 and 1, but no other integers:"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": true,
      "input": [
       "False == 0"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "True == 1 "
      ],
      "language": "python",
      "metadata": {},
@@ -352,16 +376,16 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Aside About Indentation\n",
-      "\n",
-      "The indentation is a feature of Python syntax. Some other programming languages use brackets to denote a command block. Python uses indentation. The amount of indentation doesn't matter, so long as everything in the same block is indented the same amount."
+      "## Aside About Indentation\n",
+      "The indentation is a feature of python syntax. Some other programming languages use brackets to denote a command block. Python uses indentation. The amount of indentation doesn't matter, so long as everything in the same block is indented the same amount.  "
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Exercise:** Write an if statement that prints whether x is even or odd."
+      "## Exercise\n",
+      "Write an if statement that prints whether x is even or odd."
      ]
     },
     {
@@ -377,8 +401,7 @@
      "metadata": {},
      "source": [
       "# Loops\n",
-      "\n",
-      "Loops come in two flavors: **while** and **for**.  While loops have the following structure:\n",
+      "Loops come in two flavors: `while` and `for`.  While loops have the following structure:\n",
       "\n",
       "    while <condition>:\n",
       "        <indented block of code>\n",
@@ -614,6 +637,67 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Longer Exercise: Convert genotypes\n",
+      "If most of this material is brand new to you, your goal is to complete Part 1. If you are more experienced, please move on to Part 2 and Part 3. And don't forget to talk to your neighbor!"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Motivation:\n",
+      "A biologist is interested in the genetic basis of height. She measures the heights of many subjects and sends off their DNA samples to a core for genotyping arrays. These arrays determine the DNA bases at the variable sites of the genome (known as single nucleotide polymorphisms, or SNPs). Since humans are diploid, i.e. have two of each chromosome, each data point will be two DNA bases corresponding to the two chromosomes in each individual. At each SNP, there will be only three possible genotypes, e.g. AA, AG, GG for an A/G SNP. In order to test the correlation between a SNP genotype and height, she wants to perform a regression with an additive genetic model. However, she cannot do this with the data in the current form. She needs to convert the genotypes, e.g. AA, AG, and GG, to the numbers 0, 1, and 2, respectively (in the example the number corresponds the number of G bases the person has at that SNP). Since she has too much data to do this manually, e.g. in Excel, she comes to you for ideas of how to efficiently transform the data."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Part 1:\n",
+      "Create a new list which has the converted genotype for each subject ('AA' -> 0, 'AG' -> 1, 'GG' -> 2)."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": true,
+     "input": [
+      "genos = ['AA', 'GG', 'AG', 'AG', 'GG']\n",
+      "genos_new = []\n",
+      "# Use your knowledge of if/else statements and loop structures below."
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Check your work:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "genos_new == [0, 2, 1, 1, 2]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Part 2:\n",
+      "Sometimes there are errors and the genotype cannot be determined. Adapt your code from above to deal with this problem (in this example missing data is assigned NA for \"Not Available\")."
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": true,
      "input": [
@@ -646,7 +730,49 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "# List comprehensions\n",
+      "## Part 3:\n",
+      "The file genos.txt has a column of genotypes. Read in the data and convert the genotypes as above. Hint: You'll need to use the built-in string method strip to remove the new-line characters (See the example of reading in a file above. We will cover string methods in the next section)."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": true,
+     "input": [
+      "# Store the genotypes from genos.txt in this list\n",
+      "genos_from_file = []"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Check your work:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "genos_from_file[:15] == [2, 2, 1, 1, 0, 0, 2, 2, 2, 0, 'NA', 1, 0, 0, 2]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Bonus material: List comprehensions"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "Python has another way to perform iteration called list comprehensions."
      ]
     },
